@@ -1,3 +1,9 @@
+2005-08-10 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b1
+
+	%!@# ZLORFIX ! i shouldnt touch RC code.
+
+	Fix: Minimum width change broke ecard with pictures >= 200px width.
+
 2005-08-09  Chris Kelly <ckdake@users.sf.net> 1.5.1-RC2
 
 	* Release: 1.5.1-RC2
